# cpp-clang-example

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build.yml
scripts/: build.sh  run_tidy.sh  tidy_to_sarif.py
src/: main.cpp
tidy-plugin/: CMakeLists.txt  CallPairCheck.cpp  CallPairCheck.h  PersistentDataCheck.cpp  PersistentDataCheck.h  TidyModule.cpp
